GN: freeze on updating node input value #96160

Closed
opened 2022-03-04 11:45:26 +01:00 by Hadar · 6 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.11

Blender Version
Broken: version: 3.1.0 Beta, branch: master, commit date: 2022-02-26 20:56, hash: 4ee4b61dd8
Worked: (newest version of Blender that worked as expected)

Short description of error
Blender crashes when adding together multiple Handle Type Selection nodes on different handle modes. Doesn't matter what node it plugged into and doesn't matter how you add together the Handle Type Selection nodes(happened with boolean math and regular math nodes).
the crash happens more often the more different handle modes combine.

Exact steps for others to reproduce the error
change any value in the set position node(or any node that can input a boolean). It's not happening every time so you might need to play with the value
Thanks!
Handle Type Selection Bug Report.blend
{F12896896,size=full}
2022-03-04 12-42-44.mp4

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.11 **Blender Version** Broken: version: 3.1.0 Beta, branch: master, commit date: 2022-02-26 20:56, hash: `4ee4b61dd8` Worked: (newest version of Blender that worked as expected) **Short description of error** Blender crashes when adding together multiple Handle Type Selection nodes on different handle modes. Doesn't matter what node it plugged into and doesn't matter how you add together the Handle Type Selection nodes(happened with boolean math and regular math nodes). the crash happens more often the more different handle modes combine. **Exact steps for others to reproduce the error** change any value in the set position node(or any node that can input a boolean). It's not happening every time so you might need to play with the value Thanks! [Handle Type Selection Bug Report.blend](https://archive.blender.org/developer/F12896904/Handle_Type_Selection_Bug_Report.blend) {[F12896896](https://archive.blender.org/developer/F12896896/image.png),size=full} [2022-03-04 12-42-44.mp4](https://archive.blender.org/developer/F12896907/2022-03-04_12-42-44.mp4)
Author

Added subscriber: @HadarN

Added subscriber: @HadarN
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report.
No crash here but it went to unresponsive state (Though this does not happen every time).

Hi, thanks for the report. No crash here but it went to unresponsive state (Though this does not happen every time).
Pratik Borhade changed title from Handle Type Selection Crash Geometry Nodes to GN: freeze on updating node input value 2022-03-04 12:12:46 +01:00
Jacques Lucke self-assigned this 2022-03-04 12:50:48 +01:00

This issue was referenced by 45079b169d

This issue was referenced by 45079b169dc560dc3ff1ecaa8b040a5f7b5709ab
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.1 milestone 2023-02-08 15:52:45 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96160
No description provided.