Fix T96160: freezing when using multiple Handle Type Selection nodes

Differential Revision: https://developer.blender.org/D14245